# onionclaw

./: .gitignore  LICENSE  README.md
config/: soc-suite.env.example
docs/: 00-architecture.md  01-prerequisites.md  02-security-onion-setup.md  03-mcp-deployment.md  04-openclaw-setup.md  05-autonomous-cycle.md  06-ir-team.md  07-self-improvement.md  08-skill-install.md  09-operator-runbook.md  10-security-model.md
examples/: egress-baseline.example.yaml
mcp-operator-gate/: Dockerfile  README.md  deploy.sh  operator-gate.env.example  pyproject.toml
mcp-operator-gate/operator_gate/: __init__.py  approval_watcher.py  config.py  discord_rest.py  gate.py  server.py  so_gateway_client.py  store.py
mcp-operator-gate/tests/: test_gate.py
mcp-so-gateway/: .gitignore  Dockerfile  README.md  pyproject.toml
mcp-so-gateway/so_gateway/: config.py  grounding.py  kb_write.py  server.py  so_client.py  ti.py  ti_cache.py  ti_config.py  tuning.py  tuning_service.py  tuning_store.py  wordtoken.py
mcp-so-gateway/tests/: test_config.py  test_grounding.py  test_injection_safety.py  test_kb_write.py  test_sigma_tuning.py  test_so_client.py  test_so_client_write.py  test_tools.py  test_tools_write.py  test_tuning.py  test_tuning_service.py  test_tuning_store.py  test_wordtoken.py
orchestration/: soc-log-forwarder.py
orchestration/ir-team/: ir-investigate.sh  team.md
orchestration/lib/: soc-suite-config.sh
orchestration/self-improve/: selfimprove-worker.prompt.md
orchestration/soc-cycle/: soc-cycle.prompt.md  soc-cycle.sh
security-onion/: README.md
(+14 files in other folders)
