[project]
name = "mcp-so-gateway"
version = "0.1.0"
description = "MCP server gateway for Security Onion Core API"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["so_gateway"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
